# hamster-cache

./: .gitignore  Dockerfile  Readme.md  docker-compose-dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-hub.yml
example/: config.yaml
hamstercache/: config.py  main.py  models.py  statistics.py
hamstercache/plugins/: __init__.py  plain.py  xyz.py
